<resources>
    <string name="app_name">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <!-- menu -->
    <string name="menu_item_search">Search</string>
    <string name="menu_item_about_app">Search</string>
    <string name="menu_item_help">Search</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="shop_name" >Điện Thoại Việt</string>
    <string name="network_connection">Vui lòng kiểm tra kết nối internet</string>
    <string name="title_type">Loại</string>
    <string name="unknow">Unknow</string>
    <string name="title_brand">Hãng</string>
    <string name="title_name">Tên</string>
    <string name="default_cost">10.000.000đ</string>
    <string name="default_version">Version</string>
    <string name="default_description">Chưa có mô tả</string>
    <string name="preview_button">Xem Ngay</string>
    <string name="title_information">Thông Tin</string>
    <string name="title_description">Mô Tả</string>
    <string name="title_quantity">Số lượng</string>
    <string name="default_quality">1</string>
    <string name="title_price">Giá</string>
    <string name="delete">Xóa</string>
    <string name="title_color">Màu:</string>
    <string name="default_color">Đỏ</string>
    <string name="title_version">Phiên Bản:</string>
    <string name="default_phone_name">Iphone 18</string>
    <string name="title_product">Sản phẩm:</string>
    <string name="required_address">Hãy cập nhật địa chỉ</string>
    <string name="button_order">Đặt Hàng</string>
    <string name="title_total_price">Tổng Tiền:</string>
    <string name="default_phone_check_bill">0903831922</string>
    <string name="button_check_bill">Kiểm Tra</string>
    <string name="default_id">#00</string>
    <string name="default_date">##/##/####</string>
    <string name="title_date">Ngày Đặt:</string>
    <string name="undelivered">Chưa Giao Hàng</string>
    <string name="delivered">Đã Giao Hàng</string>
    <string name="cancelled">Đã Hủy</string>
    <string name="title_payment">Thanh Toán:</string>
    <string name="default_payment">COD</string>
    <string name="button_detail">Chi Tiết</string>
    <string name="title_total">Tổng Tiền:</string>
    <string name="male">Nam</string>
    <string name="female">Nữ</string>
    <string name="title_email">Email</string>
    <string name="title_phone">Số điện thoại</string>
    <string name="title_address">Địa chỉ</string>
    <string name="notify_customer_exist">Số điện thoại của bạn chưa đặt hàng lần nào!</string>
</resources>