<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="cartItem"
            type="com.example.testapp.data.db.entities.CartItem" />
    </data>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="155sp"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardElevation="1sp"
        app:cardCornerRadius="10sp"
        app:cardUseCompatPadding="true"
        android:layout_marginStart="1sp"
        android:layout_marginEnd="1sp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/image_view_product"
                android:layout_width="125sp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:src="@drawable/placeholder"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5sp">

                <TextView
                    android:id="@+id/text_view_title_name"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/title_product"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/font_info"
                    />
                <TextView
                    android:id="@+id/text_view_product_name"
                    android:layout_width="200sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="@string/default_phone_name"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/text_view_title_name"
                    android:layout_margin="1sp"
                    android:textColor="@color/font_info"
                    />
                <TextView
                    android:id="@+id/text_view_title_version"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/title_version"
                    android:layout_below="@id/text_view_product_name"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/font_info"
                    />
                <TextView
                    android:id="@+id/text_view_product_version"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="@string/default_version"
                    android:text="@{cartItem.item.version}"
                    android:layout_below="@id/text_view_title_version"
                    android:layout_margin="1sp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/font_info"
                    />
                <TextView
                    android:id="@+id/text_view_title_color"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/title_color"
                    android:layout_below="@id/text_view_product_version"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/font_info"
                    />
                <TextView
                    android:id="@+id/text_view_product_color"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="@string/default_color"
                    android:text="@{cartItem.item.color}"
                    android:layout_below="@id/text_view_title_color"
                    android:layout_margin="1sp"
                    android:layout_alignParentStart="true"
                    android:textColor="@color/font_info"/>

                <TextView
                    android:id="@+id/text_view_title_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/title_quantity"
                    android:gravity="right"
                    android:layout_alignParentEnd="true"
                    android:paddingEnd="5sp"
                    android:textColor="@color/font_info"
                    />
                <TextView
                    android:id="@+id/text_view_product_quantity"
                    android:layout_width="30sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="@string/default_quality"
                    android:gravity="right"
                    android:paddingEnd="5sp"
                    android:textColor="@color/font_info"
                    android:text="@{Integer.toString(cartItem.quantity)}"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/text_view_title_quantity"
                    android:layout_margin="1sp"/>

                <TextView
                    android:id="@+id/text_view_title_price"
                    android:layout_width="140sp"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/title_price"
                    android:gravity="right"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/text_view_product_quantity"
                    android:paddingEnd="5sp"
                    android:textColor="@color/font_info"

                    />
                <TextView
                    android:id="@+id/text_view_product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    tools:text="@string/default_cost"
                    android:gravity="right"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@id/text_view_title_price"
                    android:paddingEnd="5sp"
                    android:layout_margin="1sp"
                    android:textColor="@color/font_info"
                    />
                <Button
                    android:id="@+id/button_remove_cart_item"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:textSize="15sp"
                    android:text="@string/delete"
                    android:layout_below="@id/text_view_product_price"
                    android:layout_alignParentEnd="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
</layout>